# hue_cpp

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt  hub.cpp  hub.h  hue.cpp  hue.h  light.cpp  light.h
src/demo/: demo.cpp
tests/: CMakeLists.txt  hue_addr_tests.cpp
